--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
   margin: 0;
   -webkit-box-shadow: none;
           box-shadow: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 a {
@@ -42,7 +44,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 900px;
+  height: 960px;
 }
 
 .main__info-logo {
@@ -142,12 +144,144 @@ body {
   font-size: 18px;
   line-height: 25px;
   color: #303030;
+  padding-bottom: 10px;
 }
 
 .info__text-block p {
-  width: 480px;
+  width: 520px;
   font-weight: 400;
   font-size: 14px;
   line-height: 19px;
+  color: #303030;
+}
+
+.rate {
+  padding-top: 160px;
+}
+
+.rate h4 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 33px;
+  color: #868585;
+}
+
+.rate__wrapper-info {
+  padding-top: 60px;
+}
+
+.info__wrapper-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.wrapper__block-one {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 50%;
+}
+
+.block__one-link {
+  word-spacing: 36px;
+}
+
+.block__one-link a {
+  font-weight: 400;
+  font-size: 18px;
+  color: #303030;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.block__one-link a:hover {
+  border-bottom: 1px solid #303030;
+}
+
+.block__one-desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.block__one-lead {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 16px 40px;
+}
+
+.one__desc-img {
+  width: 45%;
+}
+
+.one__desc-excerpt {
+  width: 55%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.one__desc-excerpt p {
+  width: 82%;
+}
+
+.one__lead-pros {
+  width: 235px;
+}
+
+.one__lead-pros h5 {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  color: #303030;
+}
+
+.one__lead-pros p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color: #303030;
+}
+
+.desc__excerpt-img {
+  padding-right: 10px;
+}
+
+.arrow__reverce {
+  padding-right: 20px;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.text__block-two {
+  width: 50%;
+}
+
+.text__block-two p {
+  padding-bottom: 30px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
   color: #303030;
 }
