--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-shadow: none;
+  box-sizing: border-box;
 }
 
 a {
@@ -35,7 +36,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 900px;
+    height: 960px;
   }
 
   &__info-logo {
@@ -148,10 +149,11 @@ body {
       font-size: 18px;
       line-height: 25px;
       color: #303030;
+      padding-bottom: 10px;
     }
     p
     {
-      width: 480px;
+      width: 520px;
       font-weight: 400;
       font-size: 14px;
       line-height: 19px;
@@ -160,3 +162,125 @@ body {
   }
 }
 // service конец
+
+//green rate начало
+.rate {
+  padding-top: 160px;
+  h4 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    color: #868585;
+  }
+
+  &__info {
+    
+  }
+
+  &__wrapper-info {
+    padding-top: 60px;
+  }
+}
+
+
+.info {
+  &__wrapper-block {
+    display: flex;
+  }
+}
+.wrapper {
+
+  &__block-one {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50%;
+  }
+}
+.block {
+
+  &__one-link {
+    word-spacing:36px;
+    a {
+      font-weight: 400;
+      font-size: 18px;
+      color: #303030;
+      transition: 0.25s;
+    }
+    a:hover {
+      border-bottom: 1px solid #303030;
+    }
+  }
+
+  &__one-desc {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__one-lead {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px 40px;
+    
+  }
+}
+.one {
+
+  &__desc-img {
+    width: 45%;
+  }
+
+  &__desc-excerpt {
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    p {
+      width: 82%;
+    }
+  }
+
+  &__lead-pros {
+    width: 235px;
+    h5 {
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 25px;
+      color: #303030;
+    }
+    p {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 19px;
+      color: #303030;
+    }
+  }
+}
+
+.desc {
+
+  &__excerpt-img {
+    padding-right: 10px;
+  }
+}
+
+.arrow {
+
+  &__reverce {
+    padding-right: 20px;
+    transform: rotate(180deg);
+  }
+}
+
+.text {
+  &__block-two {
+    width: 50%;
+    p {
+      padding-bottom: 30px;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 25px;
+      color: #303030;
+    }
+  }
+}
+//green rate конец
