--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -2,12 +2,26 @@
   padding: 0;
   margin: 0;
   box-shadow: none;
+  box-sizing: border-box;
 }
 
 a {
   padding: 0;
   margin: 0;
   text-decoration: none;
+}
+
+h4 {
+  font-weight: 700;
+  font-size: 24px;
+  color: #868585;
+}
+
+h5 {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  color: #303030;
 }
 
 body {
@@ -31,7 +45,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 900px;
+  height: 960px;
 }
 .main__info-logo {
   padding-top: 40px;
@@ -78,6 +92,187 @@ body {
   transition: 0.25s;
 }
 .title__enroll-arrow a button:hover {
+  background: #A9A32A;
+}
+
+.services__title {
+  padding: 100px 0px 50px 0px;
+}
+.services__info {
+  display: flex;
+  justify-content: space-between;
+}
+.services__info-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.services__info-text h4 {
+  width: 324px;
+}
+.info__text-block p {
+  width: 520px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color: #303030;
+}
+
+.text__block-number p {
+  padding-bottom: 10px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color: #868585;
+}
+
+.rate {
+  padding: 160px 0px 150px 0px;
+}
+.rate__wrapper-info {
+  padding-top: 60px;
+}
+
+.info__wrapper-block {
+  display: flex;
+}
+
+.wrapper__block-one {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 50%;
+}
+
+.block__one-link {
+  word-spacing: 36px;
+}
+.block__one-link a {
+  font-weight: 400;
+  font-size: 18px;
+  color: #303030;
+  transition: 0.25s;
+}
+.block__one-link a:hover {
+  border-bottom: 1px solid #303030;
+}
+.block__one-desc {
+  display: flex;
+  justify-content: space-between;
+}
+.block__one-lead {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px 40px;
+}
+
+.one__desc-img {
+  width: 45%;
+}
+.one__desc-excerpt {
+  width: 55%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.one__desc-excerpt p {
+  width: 82%;
+}
+.one__lead-pros {
+  width: 235px;
+}
+.one__lead-pros p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color: #303030;
+}
+
+.desc__excerpt-img {
+  padding-right: 10px;
+}
+
+.arrow__reverce {
+  padding-right: 20px;
+  transform: rotate(180deg);
+}
+
+.text__block-two {
+  width: 50%;
+}
+.text__block-two p {
+  padding-bottom: 30px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  color: #303030;
+}
+
+.quote {
+  background-image: url(../img/qoute/bgquote.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 586px;
+}
+.quote__text h2 {
+  padding: 160px 230px;
+  font-weight: 400;
+  font-size: 42px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.aside {
+  padding-bottom: 180px;
+}
+.aside__clients {
+  display: flex;
+  justify-content: space-between;
+}
+.aside__meta {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.aside__meta h5 {
+  width: 490px;
+}
+.aside__meta-text {
+  padding-left: 40px;
+}
+.aside__meta-text p {
+  padding-bottom: 16px;
+}
+.clients__title {
+  padding: 150px 0px 50px 0px;
+}
+
+.info__img-arrow {
+  padding: 10px 0px 0px 280px;
+}
+
+.arrow__reverce {
+  padding-right: 20px;
+  transform: rotate(180deg);
+}
+
+.button__control-arrow a {
+  font-weight: 400;
+  font-size: 18px;
+  color: #303030;
+  padding: 40px;
+}
+.button__control-arrow a button {
+  position: relative;
+  top: -20px;
+  left: -386px;
+  background: none;
+  border: #303030 solid 2.5px;
+  padding: 35px 25px 35px 25px;
+  border-radius: 50%;
+  transition: 0.25s;
+}
+.button__control-arrow a button:hover {
   background: #A9A32A;
 }
 
