--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,19 @@ a {
   text-decoration: none;
 }
 
+h4 {
+  font-weight: 700;
+  font-size: 24px;
+  color: #868585;
+}
+
+h5 {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  color: #303030;
+}
+
 
 body {
   font-family: 'Noto Sans', sans-serif;
@@ -22,6 +35,7 @@ body {
   width: 1200px;
   margin: 0 auto;
 }
+
 
 // header начало
 .main {
@@ -95,7 +109,7 @@ body {
 .title {
 
   &__enroll-arrow {
-        position: relative;
+    position: relative;
     top: 35px;
     left: -120px;
     a button {
@@ -117,12 +131,6 @@ body {
 
   &__title {
     padding: 100px 0px 50px 0px;
-    h4 {
-      font-weight: 700;
-      font-size: 24px;
-      line-height: 33px;
-      color: #868585;
-    }
   }
 
   &__info {
@@ -134,6 +142,9 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    h4 {
+      width: 324px;
+    }
   }
 
   &__text-img {
@@ -143,14 +154,6 @@ body {
 .info {
 
   &__text-block {
-    h5 {
-      width: 510px;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 25px;
-      color: #303030;
-      padding-bottom: 10px;
-    }
     p
     {
       width: 520px;
@@ -161,17 +164,25 @@ body {
     }
   }
 }
+
+.text {
+
+  &__block-number {
+    p {
+      padding-bottom: 10px;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 19px;
+      color: #868585;
+    }
+  }
+}
+
 // service конец
 
 //green rate начало
 .rate {
-  padding-top: 160px;
-  h4 {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 33px;
-    color: #868585;
-  }
+  padding: 160px 0px 150px 0px;
 
   &__info {
     
@@ -241,12 +252,6 @@ body {
 
   &__lead-pros {
     width: 235px;
-    h5 {
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 25px;
-      color: #303030;
-    }
     p {
       font-weight: 400;
       font-size: 14px;
@@ -284,3 +289,105 @@ body {
   }
 }
 //green rate конец
+
+// quote начало
+.quote {
+  background-image: url(../img/qoute/bgquote.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 586px;  
+  &__text {
+    h2 {
+      padding: 160px 230px;
+      font-weight: 400;
+      font-size: 42px;
+      text-align: center;
+      color: #FFFFFF;
+    }
+  }
+}
+// quote конец
+
+// aside начало
+.aside {
+  padding-bottom: 180px;
+  &__clients {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__clients-info {
+  }
+
+  &__info-img {
+  }
+
+  &__meta {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    h5 {
+      width: 490px;
+    }
+  }
+
+  &__meta-text {  
+    padding-left: 40px;
+    p {
+      padding-bottom: 16px;
+    }
+  }
+
+
+  &__button-enroll {
+  }
+}
+
+.clients {
+
+  &__title {
+    padding: 150px 0px 50px 0px;
+  }
+}
+.info {
+
+  &__img-arrow {
+    padding: 10px 0px 0px 280px;
+  }
+}
+.arrow {
+
+  &__reverce {
+    padding-right: 20px;
+    transform: rotate(180deg);
+  }
+}
+
+.button {
+
+  &__control-arrow {
+    a {
+      font-weight: 400;
+      font-size: 18px;
+      color: #303030;
+      padding: 40px;
+    }
+    a button {
+      position: relative;
+      top: -20px;
+      left: -386px;
+      background: none;
+      border: #303030 solid 2.5px;
+      padding: 35px 25px 35px 25px;
+      border-radius: 50%;
+      transition: 0.25s;
+    }
+
+    a button:hover {
+      background: #A9A32A;
+    }
+  }
+}
+
+// aside конец
+
