--- a/css/style.css
+++ b/css/style.css
@@ -370,3 +370,145 @@ body {
 .button__control-arrow a button:hover {
   background: #A9A32A;
 }
+
+.footer {
+  background-image: url(../img/footer/footerbg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 700px;
+  color: #FFFFFF;
+}
+
+.footer__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 650px;
+  padding-top: 70px;
+}
+
+.footer__reg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 400px;
+}
+
+.footer__reg-request {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__reg-request h5 {
+  font-size: 24px;
+  color: #FFFFFF;
+}
+
+.footer__input {
+  border-bottom: 1px solid #FFFFFF;
+  width: 550px;
+}
+
+.footer__input input {
+  background: transparent;
+  border: none;
+  border-bottom: 2px #fff;
+  color: #fff;
+  outline: none;
+  padding-bottom: 10px;
+}
+
+.footer__input input::-webkit-input-placeholder {
+  color: #fff;
+}
+
+.footer__input input:-ms-input-placeholder {
+  color: #fff;
+}
+
+.footer__input input::-ms-input-placeholder {
+  color: #fff;
+}
+
+.footer__input input::placeholder {
+  color: #fff;
+}
+
+.footer__enroll a {
+  padding-left: 40px;
+  font-size: 18px;
+  line-height: 25px;
+  color: #FFFFFF;
+}
+
+.footer__enroll-arrow {
+  position: relative;
+  top: 35px;
+  left: -45px;
+}
+
+.footer__enroll-arrow a button {
+  background: none;
+  border: #FFFFFF solid 2.5px;
+  padding: 35px 25px 35px 25px;
+  border-radius: 50%;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.footer__enroll-arrow a button:hover {
+  background: #A9A32A;
+}
+
+.footer__reg-contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__reg-contact h5 {
+  font-size: 24px;
+  color: #FFFFFF;
+}
+
+.footer__copyrigth {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__copyrigth a {
+  color: #FFFFFF;
+}
+
+.footer__copyrigth-socials a img {
+  padding-left: 10px;
+}
