--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,10 +17,9 @@ h4 {
 }
 
 h5 {
-
-  font-weight: 700;
   font-size: 18px;
   line-height: 25px;
+  color: #303030;
 }
 
 
@@ -298,7 +297,6 @@ body {
     transform: rotate(180deg);
   }
 }
-
 //rate конец
 
 // quote начало
